<resources>
    <string name="app_name">NotasApp</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="synchronize">Synchronize</string>
    <string name="email">Correo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings_nombre">Nombre</string>
    <string name="settings_name">Nombre</string>
    <string name="settings_second_name">Apellido Paterno</string>
    <string name="settings_last_name">Apellidos</string>
    <string name="settings_email">Correo</string>
    <string name="settings_save">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_probando">Probando</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="preofile">Profile</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
</resources>
